# Degrees-of-Lewdity-Languages-Tools

./: .env.template  .gitignore  LICENSE  conda-env.yaml  pyproject.toml  pytest.ini  readme.md  requirements.txt  run.py
lib/dicts/: readme.txt
src/: csv_helper.py  dictionary_helper.py  diff_helper.py  differentiator.py  download_helper.py  downloader.py  dumper.py  formatter.py  io_helper.py  js_parser.py  merger.py  migrator.py  parser.py  translator.py  twee_parser.py
tests/: prompt.txt  test_csv.py  test_diff.py  test_downloader.py  test_dumper.py  test_filename_list.py  test_io.py  test_merge.py  test_migrator.py  test_mt_resume.py  test_mt_state.py  test_parse_js.py  test_parse_twee.py  test_translator.py  test_variables_processor.py
