[project]
name = "degrees-of-lewdity-language-dumper"
version = "0.1.0"
description = ""
authors = [
    {name = "rainbowflesh"},
    {name= 'NumberSir'},
    {name= 'ZerxZ'},
    {name= 'Eltirosto'},
    {name= 'cphxj123'},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "orjson (>=3.10.16,<4.0.0)",
    "dukpy (>=0.5.0,<0.6.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "typing-extensions (>=4.13.2,<5.0.0)",
    "pygithub (>=2.6.1,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pysmartdl2 (>=2.0.1,<3.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
